# Rust_programin_language-practice

./: .gitignore  README.md
inventory_manager/src/: main.rs
project_ management/: README.md
project_ management/backend/: .env.example  Cargo.toml
project_ management/backend/migrations/: 001_initial.sql
project_ management/backend/src/: config.rs  main.rs
project_ management/backend/src/database/: mod.rs  pool.rs
project_ management/backend/src/errors/: app_error.rs
project_ management/backend/src/handlers/: auth.rs  calendar.rs  dashboard.rs  members.rs  mod.rs  projects.rs  tasks.rs
project_ management/backend/src/ipc/: mod.rs
project_ management/backend/src/models/: mod.rs  project.rs  task.rs  user.rs
project_ management/frontend/: index.html  package-lock.json  package.json  test_crud_operations.cjs
project_ management/frontend/src/: App.css  App.jsx  main.jsx
project_ management/frontend/src/components/: ActiveProjects.css  ActiveProjects.jsx  AuthModal.css  AuthModal.jsx  NewProjectModal.jsx  NewTaskModal.jsx  Sidebar.css  Sidebar.jsx  StatsCards.css  StatsCards.jsx  TeamActivity.css  TeamActivity.jsx  TopBar.css  TopBar.jsx  UpcomingDeadlines.css  UpcomingDeadlines.jsx  WeeklyChart.css  WeeklyChart.jsx
project_ management/frontend/src/context/: AuthContext.jsx
project_ management/frontend/src/hooks/: useWebSocket.js
project_ management/frontend/src/pages/: CalendarView.jsx  ProjectDetailView.jsx  ProjectsView.jsx  ReportsView.jsx  TeamView.jsx
project_ management/frontend/src/services/: ipc.js
task_manager/src/: main.rs
(+1 files in other folders)
